# Magic-CheatSheet

./: README.md  pyproject.toml  requirements.txt
.github/instructions/: project.instructions.md
magic_cheatsheet/: app.py  cli.py  main.py  manage_config.py  prompt.py
