[project]

name = "magic_cheatsheet"
version = "1.0.0"
description = " A fast and easy to use in-terminal cheatsheet generator "
authors = [
    { name = "NoLilypad" }
]
readme = "README.md"
requires-python = ">=3.8"


dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.10.0",
    "certifi==2025.8.3",
    "eval_type_backport==0.2.2",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.10",
    "invoke==2.2.0",
    "mistralai==1.9.10",
    "ollama==0.5.4",
    "platformdirs==4.4.0",
    "pydantic==2.11.9",
    "pydantic_core==2.33.2",
    "python-dateutil==2.9.0.post0",
    "PyYAML==6.0.2",
    "six==1.17.0",
    "sniffio==1.3.1",
    "termcolor==3.1.0",
    "typing-inspection==0.4.1",
    "typing_extensions==4.15.0"
]


[project.optional-dependencies]
all = [
    "platformdirs",
    "pyyaml"
]

[project.scripts]
magic_cheatsheet = "magic_cheatsheet.cli:main"
